force-app/main/default/objects/Tenant__c/fields/Background_Check__c.field-meta.xml
<CustomField>
    <fullName>Background_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should be checked if a clean background check has been received and approved.</inlineHelpText>
    <label>Background Check</label>
    <type>Checkbox</type>
</CustomField>