force-app/main/default/objects/Tenant__c/fields/Lease_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Lease_Agreement__c</fullName>
    <label>Lease Agreement</label>
    <referenceTo>Lease_Agreement__c</referenceTo>
    <relationshipLabel>Tenants</relationshipLabel>
    <relationshipName>Tenants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>