force-app/main/default/objects/Tenant__c/validationRules/User_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Required</fullName>
    <active>false</active>
    <errorConditionFormula>User__c  = null</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>A tenant profile must be attached to a user.</errorMessage>
</ValidationRule>