force-app/main/default/objects/Tenant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Primary_Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Lease_Agreement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>